--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+        multiDexEnabled true
+    }
+    dataBinding {
+        enabled = true
     }
 
     compileOptions {
@@ -91,4 +95,9 @@ dependencies {
     //SmartRefreshLayout
     implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'
     implementation  'com.scwang.smart:refresh-header-classics:2.0.1'//经典刷新头
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
