--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,12 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+
     implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'top.zibin:Luban:1.1.8'
+
+
 }
