--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permissions.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".MyApplication"
@@ -27,7 +28,10 @@
         <activity android:name=".lifecycle.LifecycleActivity" />
         <activity android:name=".textAnnotation.TextAnnotationActivity" />
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity"
+            android:launchMode="singleTask"
+            />
+        <service android:name=".service.ForegroundService"/>
 
         <activity-alias
             android:name=".kotlin"
