--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,51 +14,57 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permissions.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/nobar"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".ui.bottomappbar.BottomAppbarActivity"
+        <activity android:name=".ui.bitmap.BitmapActivity"
+            android:label="@string/BitmapActivity" />
+        <activity
+            android:name=".ui.bottomappbar.BottomAppbarActivity"
             android:label="@string/BottomAppbarActivity" />
-        <activity android:name=".ui.youku.main.YoukuMainActivity"
-            android:label="@string/YoukuMainActivity"/>
-        <activity android:name=".ui.fold.FoldActivity"
-            android:label="@string/FoldActivity"
-            />
+        <activity
+            android:name=".ui.youku.main.YoukuMainActivity"
+            android:label="@string/YoukuMainActivity" />
+        <activity
+            android:name=".ui.fold.FoldActivity"
+            android:label="@string/FoldActivity" />
         <activity
             android:name=".ui.medio.MediaSessionPlaybackActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:supportsPictureInPicture="true"
             android:label="@string/MediaSessionPlaybackActivity"
+            android:supportsPictureInPicture="true"
             tools:targetApi="n" />
         <activity
             android:name=".ui.medio.MediaActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:supportsPictureInPicture="true"
             android:label="@string/MediaActivity"
+            android:supportsPictureInPicture="true"
             tools:targetApi="n" />
-        <activity android:name=".ui.dilogFollow.DialogFollowActivity"
-            android:label="@string/DialogFollowActivity"
-            />
-        <activity android:name=".ui.smart.SmartActivity"
-            android:label="@string/SmartActivity"/>
-
-        <activity android:name=".lifecycle.LifecycleActivity"
+        <activity
+            android:name=".ui.dilogFollow.DialogFollowActivity"
+            android:label="@string/DialogFollowActivity" />
+        <activity
+            android:name=".ui.smart.SmartActivity"
+            android:label="@string/SmartActivity" />
+        <activity
+            android:name=".lifecycle.LifecycleActivity"
             android:label="@string/LifecycleActivity" />
-
-        <activity android:name=".textAnnotation.TextAnnotationActivity"
-            android:label="@string/TextAnnotationActivity"/>
-        <activity android:name=".login.LoginActivity"
-            android:label="@string/loginActivity"/>
+        <activity
+            android:name=".textAnnotation.TextAnnotationActivity"
+            android:label="@string/TextAnnotationActivity" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:label="@string/loginActivity" />
         <activity
             android:name=".ui.main.MainActivity"
             android:launchMode="singleTask" />
@@ -74,8 +80,9 @@
             </intent-filter>
         </activity-alias>
 
-        <service android:name=".service.ForegroundService"
-            android:label="前台服务"/>
+        <service
+            android:name=".service.ForegroundService"
+            android:label="前台服务" />
     </application>
 
 </manifest>
